--- a/fixdate.io/ar/modelo-invitacion/deluxe&version=2.html
+++ b/fixdate.io/ar/modelo-invitacion/deluxe&version=2.html
@@ -104,7 +104,7 @@
           </div>
 
 
-          <img class="injectable adorno adorno-modal-musica" src="D:\OneDrive - Software Broker\Desktop\Web\casamientoFer\otromas.png" alt="">
+          <img class="injectable adorno adorno-modal-musica" src="imagenes\otromas.png" alt="">
 
         </div>
 
