--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 
 <table width="76%" border="0" align="center" cellspacing="0" cellpadding="3" class="tableWidth">
 	<tr>
-	<td id="subTitle">HTTrack Website Copier - Open Source offline browser</td>
+	<td id="subTitle">Boda</td>
 	</tr>
 </table>
 <table width="76%" border="0" align="center" cellspacing="0" cellpadding="0" class="tableWidth">
@@ -98,7 +98,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	<TITLE>Casamiento</TITLE>
 </HEAD>
 <BODY>
-<H1 ALIGN=Center>Index of locally available sites:</H1>
+<H1 ALIGN=Center>Casamiento:</H1>
 	<TABLE BORDER="0" WIDTH="100%" CELLSPACING="1" CELLPADDING="0">
 		<TR>
 			<TD BACKGROUND="fade.gif">
