--- a/fixdate.io/ar/modelo-invitacion/deluxe&version=2.html
+++ b/fixdate.io/ar/modelo-invitacion/deluxe&version=2.html
@@ -650,7 +650,8 @@
     <div class="row text-center d-flex justify-content-center align-items-center">
 
 
-      <div class="anim-adorno-titulo anim-adorno-titulo-3"><img src="imagenes\separadorRetratoAmor-removebg-preview.png"
+      <div class="anim-adorno-titulo anim-adorno-titulo-3"><img
+          src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/separadorRetratoAmor-removebg-preview.png"
           width="300"> </div>
       
       <h2 class="title">Compartimos este día junto a vos</h2>
@@ -664,7 +665,7 @@
       </div>
 
       <div class="w-100">
-        <a target="_blank" class="hashtag with-extremo-shape" href="https://www.instagram.com/">#FeryJosé</a>
+        <a target="_blank" class="hashtag with-extremo-shape" href="">#FeryJosé</a>
       </div>
       
 
