--- a/fixdate.io/ar/modelo-invitacion/deluxe&version=2.html
+++ b/fixdate.io/ar/modelo-invitacion/deluxe&version=2.html
@@ -156,7 +156,8 @@
 
           <div class="iniciales">
             <span>F </span>
-            <img class="injectable ampersand-portada" src="https://fixdate.io/modelo-invitacion/125/img/ampersand.svg" alt="">
+            <img class="injectable ampersand-portada"
+              src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/ampersalclaro-removebg-preview.png" alt="">
             <span>J </span>
           </div>
 
@@ -693,17 +694,19 @@
       <div class="col-md-6 d-flex justify-content-center align-items-center">
 
         <div class="col-nombres-footer">
-
+          <br>
           <div class="iniciales">
-            <span>F</span>
-            <span>.</span>
-            <span>J</span>
+            <br>
+            <span>F </span>
+            <img class="injectable ampersand-portada"
+              src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/ampersalclaro-removebg-preview.png" alt="">
+            <span>J </span>
+            <br>
           </div>
-
-          <div class="nombres">
+            <div class="nombres">
             <p>Fer & José</p>
           </div>
-
+        
         </div>
       </div>
 
@@ -792,7 +795,7 @@
       </div>
     </div>
   </div>
-</footer> -->
+</footer>
 
 
 <!-- Musica -->
