--- a/fixdate.io/deluxe&version=2.html
+++ b/fixdate.io/deluxe&version=2.html
@@ -170,7 +170,7 @@
         <div class="box-frase-portada">
           <img class="injectable adorno-gota" src="https://fixdate.io/modelo-invitacion/125/img/adorno_gota.svg" alt="">
           <p>
-            Todos somos mortales, <br> hasta el primer beso y la segunda copa de vino          </p>
+            NUESTRO SÍ <br> PARA SIEMPRE         </p>
           <div class="anim-frase-portada">
             <img src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/bajofraseheader.png" width="120"
               height="120">
