--- a/fixdate.io/deluxe&version=2.html
+++ b/fixdate.io/deluxe&version=2.html
@@ -733,7 +733,7 @@
               <span class="start">2024-07-14 23:18:07</span>
               <span class="end">2024-07-14 23:18:07</span>
               <span class="timezone">America/Argentina/Buenos_Aires</span>
-              <span class="title">Boda de Fer y José (Fiesta)</span>
+              <span class="title">Boda de Fer y Jose (Fiesta)</span>
 
             </div>
           </li>
