--- a/fixdate.io/deluxe&version=2.html
+++ b/fixdate.io/deluxe&version=2.html
@@ -170,7 +170,7 @@
         <div class="box-frase-portada">
           <img class="injectable adorno-gota" src="https://fixdate.io/modelo-invitacion/125/img/adorno_gota.svg" alt="">
           <p>
-            NUESTRO SÍ <br> PARA SIEMPRE         </p>
+            NUESTRO SÍ <br> PARA SIEMPRE </p>
           <div class="anim-frase-portada">
             <img src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/bajofraseheader.png" width="120"
               height="120">
@@ -528,7 +528,8 @@
             <p>
               ¿Cuál es la canción que no debe faltar en la PlayList de la fiesta?            </p>
 
-            <a href="https://open.spotify.com/playlist/3jqES3Mg3PyL2K0H5hY92O?si=BgKlj_UWQJiDkZuL-UkLPg&pi=gqPlazE7QK-9Z " class="boton">Sugerir canción</a>
+            <a href="https://open.spotify.com/playlist/3jqES3Mg3PyL2K0H5hY92O?si=BgKlj_UWQJiDkZuL-UkLPg&pi=gqPlazE7QK-9Z "
+              class="boton">Sugerir canción</a>
 
           </div>
 
@@ -733,7 +734,7 @@
               <span class="start">2024-07-14 23:18:07</span>
               <span class="end">2024-07-14 23:18:07</span>
               <span class="timezone">America/Argentina/Buenos_Aires</span>
-              <span class="title">Boda de Fer y Jose (Fiesta)</span>
+              <span class="title">Boda de Fer y José (Fiesta)</span>
 
             </div>
           </li>
