--- a/fixdate.io/ar/modelo-invitacion/deluxe&version=2.html
+++ b/fixdate.io/ar/modelo-invitacion/deluxe&version=2.html
@@ -170,7 +170,7 @@
         <div class="box-frase-portada">
           <img class="injectable adorno-gota" src="https://fixdate.io/modelo-invitacion/125/img/adorno_gota.svg" alt="">
           <p>
-            Todos somos mortales, <br> hasta el primer beso y la segunda copa de vino          </p>
+            NUESTRO SÍ <br> PARA SIEMPRE          </p>
           <div class="anim-frase-portada">
             <img src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/bajofraseheader.png" width="120"
               height="120">
@@ -430,7 +430,7 @@
         <div>
           <div class="polaroid">
 
-            <a href="https://fixdate.io/modelo-invitacion/125/img/galeria/1.jpg" data-fancybox="galeria">
+            <a href="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/2.jpg" data-fancybox="galeria">
               <img src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/2.jpg" alt="">
             </a>
 
@@ -443,7 +443,7 @@
         <div>
           <div class="polaroid">
 
-            <a href="https://fixdate.io/modelo-invitacion/125/img/galeria/2.jpg" data-fancybox="galeria">
+            <a href="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/3jpg.jpg" data-fancybox="galeria">
               <img src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/3jpg.jpg" alt="">
             </a>
 
@@ -456,7 +456,7 @@
         <div>
           <div class="polaroid">
 
-            <a href="https://fixdate.io/modelo-invitacion/125/img/galeria/3.jpg" data-fancybox="galeria">
+            <a href="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/4.jpg" data-fancybox="galeria">
               <img src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/4.jpg" alt="">
             </a>
 
@@ -469,7 +469,7 @@
         <div>
           <div class="polaroid">
 
-            <a href="https://fixdate.io/modelo-invitacion/125/img/galeria/4.jpg" data-fancybox="galeria">
+            <a href="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/5.jpg" data-fancybox="galeria">
               <img src="https://lucasarroyo12.github.io/casamientojoseyfer.github.io/imagenes/5.jpg" alt="">
             </a>
 
@@ -528,7 +528,7 @@
             <p>
               ¿Cuál es la canción que no debe faltar en la PlayList de la fiesta?            </p>
 
-            <a href="https://open.spotify.com/playlist/37i9dQZF1DWSpF87bP6JSF" class="boton">Sugerir canción</a>
+            <a href="https://open.spotify.com/playlist/3jqES3Mg3PyL2K0H5hY92O?si=BgKlj_UWQJiDkZuL-UkLPg&pi=gqPlazE7QK-9Z&nd=1&dlsi=f07753de29e4430d" class="boton">Sugerir canción</a>
 
           </div>
 
@@ -666,7 +666,7 @@
       </div>
 
       <div class="w-100">
-        <a target="_blank" class="hashtag with-extremo-shape" href="">#FeryJosé</a>
+        <a target="_blank" class="hashtag with-extremo-shape" href="">#FeryJose</a>
       </div>
       
 
